--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@react-navigation/native-stack": "^7.3.24",
     "expo": "~53.0.20",
     "expo-status-bar": "~2.2.3",
-    "firebase": "^12.0.0",
+    "firebase": "^12.1.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1"
+    "react-native-screens": "~4.11.1",
+    "expo-image-picker": "~16.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
